link error fixed for chrome

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <div class="headernav">
             <div class="headerlink one"> <a href="#">header link one</a></div>
-            <div class="headerlink two"> <a href="../css assignments/Task 2/index.html"> Task 2</a></div>
-            <div class="headerlink three"> <a href="../css assignments/Task 3/index.html"> Task 3</a></div>
-            <div class="headerlink three"> <a href="../css assignments/Task 4/index.html"> Task 4</a></div>
+            <div class="headerlink two"> <a href="./Task 2/index.html"> Task 2</a></div>
+            <div class="headerlink three"> <a href="./Task 3/index.html"> Task 3</a></div>
+            <div class="headerlink three"> <a href="./Task 4/index.html"> Task 4</a></div>
         </div>
     </header>
     <div class="heotext">
@@ -32,9 +32,9 @@
         
         <div class="section">
             <a class="a" href="#"> Task 1</a>
-            <a class="b" href="../css assignments/Task 2/index.html"> Task 2</a>
-            <a class="c" href="../css assignments/Task 3/index.html"> Task 3</a>
-            <a class="d" href="../css assignments/Task 4/index.html"> Task 4</a>
+            <a class="b" href="./Task 2/index.html"> Task 2</a>
+            <a class="c" href="./Task 3/index.html"> Task 3</a>
+            <a class="d" href="./Task 4/index.html"> Task 4</a>
         </div>
     </section>
 <section>
